# haskell-cli

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.name}}/: LICENSE  {{cookiecutter.name}}.cabal
{{cookiecutter.name}}/app/: Main.hs
{{cookiecutter.name}}/src/: Lib.hs
{{cookiecutter.name}}/test/: Spec.hs
