name:                {{cookiecutter.name}}
version:             0.1.0.0
synopsis:            {{cookiecutter.description}}
{%- if cookiecutter.git_host == "Github" %}
homepage:            https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.name}}#readme
{%- elif cookiecutter.git_host == "Gitlab" %}
homepage:            https://gitlab.com/{{cookiecutter.git_username}}/{{cookiecutter.name}}#readme
{%- else %}
-- homepage:
{%- endif %}
license:             BSD3
license-file:        LICENSE
author:              {{cookiecutter.author_name}}
maintainer:          {{cookiecutter.email}}
copyright:           {{cookiecutter.year}} {{cookiecutter.author_name}}
category:            {{cookiecutter.category}}
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.name}}#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable {{cookiecutter.name}}
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , {{cookiecutter.name}}
  default-language:    Haskell2010

test-suite {{cookiecutter.name}}-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , {{cookiecutter.name}}
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

{% if cookiecutter.git_host == "Github" %}
source-repository head
  type:     git
  location: https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.name}}
{% elif cookiecutter.git_host == "Gitlab" %}
source-repository head
  type:     git
  location: https://gitlab.com/{{cookiecutter.git_username}}/{{cookiecutter.name}}
{% else %}
-- source-repository head
--   type:     git
--   location: https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.name}}
{% endif %}
